# react-fastapi-admin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements.txt
app/: __init__.py  application.py  cli.py  main.go
app/api/: catalog.py
app/controllers/: api.py  role.py  upload.py  user.py
app/core/: bgtask.py  bootstrap.py  crud.py  ctx.py  db_runtime.py  dependency.py  exceptions.py  init_app.py  middlewares.py  navigation.py  overview.py  transactions.py
app/models/: __init__.py  admin.py  base.py  enums.py  system_setting.py
app/repositories/: __init__.py  api_repository.py  base.py  dept_repository.py  role_repository.py  system_setting_repository.py  user_repository.py
app/schemas/: apis.py  base.py  login.py  roles.py  system_settings.py  users.py
app/services/: __init__.py  admin_permission_service.py  api_admin_service.py  auth_service.py  dept_admin_service.py  role_admin_service.py  system_setting_service.py  upload_service.py  user_admin_service.py
app/settings/: config.py  reload_config.py
app/tests/: test_auth_cookie_security.py  test_auth_security.py  test_bootstrap.py  test_cli.py  test_log_system.py  test_overview.py  test_role_admin_service.py  test_settings.py  test_system_settings.py  test_user_admin_service.py
app/utils/: __init__.py  json_encoder.py  (+3 more)
deploy/: .env.example  docker-compose.local.yml  docker-compose.yml  install.sh
go-backend/: README.md  go.mod  go.sum
web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
(+79 files in other folders)
